codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_renders_live_tail.snap
---
source: tui/src/pager_overlay.rs
expression: term.backend()
---
"/ 转 录 / / / / / / / / / / / / / / / / " Hidden by multi-width symbols: [(3, " "), (6, " ")]
"alpha                                   "
"                                        "
"tail                                    "
"~                                       "
"~                                       "
"───────────────────────────────── 100% ─"
" ↑/↓ 滚动   pgup/pgdn 翻页   home/end 跳" Hidden by multi-width symbols: [(6, " "), (8, " "), (23, " "), (25, " "), (39, " ")]
" q 退出   esc 编辑上一条                " Hidden by multi-width symbols: [(4, " "), (6, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " ")]
"                                        "
